--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </a>
       </nav>
 
-      <div class="header__inner">
+      <section class="header__inner">
         <h1 class="header__title title">Заголовок c уникальным торговым предложение по системе 4U</h1>
 
         <p class="header__text">
@@ -34,7 +34,7 @@
         </p>
 
         <a href="#" class="header__button button">Подробнее</a>
-      </div>
+      </section>
     </div>
   </header>
 
@@ -47,11 +47,11 @@
 
           <h3 class="section__subtitle features__subtitle">
             <span class="features__element">
-              <img class="featueres__element-img" src="./img/left-line.svg" alt="Line">
+              <img class="featueres-img" src="./img/left-line.svg" alt="Line">
             </span>
             О нас
             <span class="features__element">
-              <img class="featueres__element-img" src="./img/right-line.svg" alt="Line">
+              <img class="featueres-img" src="./img/right-line.svg" alt="Line">
             </span>
           </h3>
 
