--- a/index.html
+++ b/index.html
@@ -26,19 +26,24 @@
         </a>
       </nav>
 
-      <section class="header__inner">
-        <h1 class="header__title title">Заголовок c уникальным торговым предложение по системе 4U</h1>
-
-        <p class="header__text">
-          Описания предлжения компании. Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему.
-        </p>
-
-        <a href="#" class="header__button button">Подробнее</a>
-      </section>
     </div>
   </header>
 
   <main class="main">
+
+    <section class="section top">
+      <div class="container">
+        <div class="top__inner">
+          <h1 class="top__title title">Заголовок c уникальным торговым предложение по системе 4U</h1>
+
+        <p class="top__text">
+          Описания предлжения компании. Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему.
+        </p>
+
+        <a href="#" class="top__button button">Подробнее</a>
+        </div>
+      </div>
+    </section>
 
     <section class="section features">
       <div class="container">
@@ -91,7 +96,7 @@
   </main>
 
   <footer class="footer">
-    <div class="containe footer__container">
+    <div class="container footer__container">
       <div class="footer__inner">
           <a class="footer__logo logo" href="#">
             <img class="logo__img" src="./img/logo.svg" alt="Logo"/>
@@ -118,6 +123,12 @@
       </div>
     </div>
   </footer>
+
+  <div class="footer__bottom">
+    <div class="footer__author--mobile">
+      <p>Сделано  Ивановым Иваном</p>
+    </div>
+  </div>
 
 </body>
 </html>
